--- a/README
+++ b/README
@@ -1,4 +1,9 @@
-  _______                     ________        __
+
+* ref to: branch -> licheepi-nano
+
+---
+
+_______                     ________        __
  |       |.-----.-----.-----.|  |  |  |.----.|  |_
  |   -   ||  _  |  -__|     ||  |  |  ||   _||   _|
  |_______||   __|_____|__|__||________||__|  |____|
