--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+* ref to branch: licheepi-nano
+
+---
+
 This is the buildsystem for the OpenWrt Linux distribution.
 
 Please use "make menuconfig" to configure your appreciated
